# SADGP

./: .editorconfig  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  dev-requirements.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
dashboard/: index.html  package.json
dashboard/src/: App.jsx  styles.css
deploy/helm/: values.yaml
docs/: API.md
examples/: synthetic_requests.json
proxy/: __init__.py  config.example.yaml  dlp_engine.py  fingerprinter.py  governance_logger.py  main.py  mitm_layer.py  policy_engine.py  redactor.py
tests/: conftest.py  test_dlp.py  test_fingerprinting.py  test_proxy.py
